# Isle-of-Genesis

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-14-isle-of-genesis.md  2026-03-14-ui-redesign.md
docs/superpowers/specs/: 2026-03-14-isle-of-genesis-design.md  2026-03-14-ui-redesign-design.md
frontend/: app.js  canvas.js  charts.js  feed.js  index.html
persistence/: eventlog.py  snapshots.py
server/: main.py  routes.py  schemas.py  ws.py
simulation/: config.py  engine.py  events.py  heuristics.py  market.py  metrics.py
simulation/models/: actions.py  agent.py  state.py  world.py
tests/persistence/: test_eventlog.py  test_snapshots.py
tests/server/: test_routes.py
tests/simulation/: test_engine.py  test_heuristics.py  test_market.py  test_metrics.py
tests/simulation/models/: test_agent.py  test_state.py  test_world.py
